FIX File in collection : vertical align of image thumbnail and filename

--- a/skins/default/form.scss
+++ b/skins/default/form.scss
@@ -207,7 +207,7 @@ fieldset {
 						padding: 1px 5px 0 0;
 						white-space: nowrap;
 
-						>input, >textarea {
+						>input:not([type=file]), >textarea {
 							height: 18px;
 							margin-top: -2px;
 							vertical-align: top;
